--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       </a-marker>
      <!-- <a-sphere position="0 0 -5" radius="0.5" color="blue"></a-sphere> -->
-     <a-text value="Hello World!" 
+     <a-text value="Hello World! hi!" 
         position="0 0 -20" 
         align="center" 
         color="red" 
