my brain is fried

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -98,7 +98,7 @@
     </div>
 
     <div class="instructions">Camera will request permission. Tap to place (Tap mode) or add GPS pin. GPS pins are saved & restored.</div>
-    <!-- A-Frame + AR.js lube 106 works for some reason, it makes the camera clear and scale properly, do not touch-->
+    <!-- A-Frame + AR.js-->
     <a-scene
       embedded
       vr-mode-ui="enabled:false"
