Fix AR.js camera initialization and object placement
- Added missing AR.js configuration to a-scene tag
- Fixed tap-to-place button to not call placeInFront() immediately
- Restored GLB model support with public CDN URLs
- Fixed object placement flow for both tap and GPS modes
- Camera should now initialize properly for AR functionality

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,7 +72,7 @@
     <!-- UI -->
     <div class="ui-panel">
       <div>
-        <button class="ui-button" onclick="placeGLBInFront('fox', true)">Place Box (GLB)</button>
+        <button class="ui-button" onclick="placeGLBInFront('fox', true)">Place Fox (GLB)</button>
 
         <button class="ui-button active" id="cube-btn" onclick="selectObjectType('cube')">Cube</button>
         <button class="ui-button" id="sphere-btn" onclick="selectObjectType('sphere')">Sphere</button>
